# BackendTemplate

./: .gitignore  Dockerfile  local.compose.yaml  pyproject.toml
.github/workflows/: develop.yaml  main.yaml
apps/api/: start.py
apps/worker/: start.py
backend_template/apps/api/: start.py
backend_template/apps/worker/: start.py
infrastructure/local/: all.compose.yaml  infra.compose.yaml  monitor.compose.yaml  services.compose.yaml
scripts/: api.sh  flower.sh  worker.sh
scripts/compose/: local-all.sh  local-infra.sh  local-serve.sh
scripts/install/: tools.sh
scripts/run/: api.sh  flower.sh  worker.sh
scripts/test/: test-api.sh  test-http.sh
supabase/: config.toml
tests/unit/: test_imports.py
