[tool.poetry]
name = "backendtemplate"
version = "0.1.0"
description = ""
authors = ["Matthew Beatty <beattyml1@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_template"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
pgalchemy = "^0.1.5"
pydantic = "^2.10.6"
celery = "^5.4.0"
authlib = "^1.4.1"
redis = "^5.2.1"
aiohttp="^3.11.11"

# Common libs
#requests-oauthlib = "^2.0.0" # OAuth to other apis
#pypdf = "^4.2.0" # PDF Handling
#stripe = "^10.1.0" # Credit Card Handling
#jinja2 = "^3.1.4" # Templateing
#beautifulsoup4 = "4.12.3" # HTML Parsing
#feedparser = "^6.0.11" # RSS Feed Reading
#pandas = "2.2.2" # Data analytics and Reporting

# Infrastructure Clients
#boto3 = "^1.34.138" # AWS resources
#elasticsearch = "^8.14.0" # ElasticSearch: Text Search Index and Vector DB, server
#pinecone-client = "^4.1.1" # Pinecone: Vector DB, serverless
#pymongo = "^4.8.0" # Mongo DB: Dcoument DB, server
#rabbitmq-client =  "^2.4.0" # Rabbit MQ, only if you need access beyond what celery provides or not using celery
supabase = "^2.13.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-snapshot = "^0.9.0"
mock = "^5.1.0"
alembic = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
